--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,3 +1,4 @@
+altair==5.0.1
 attrs==22.2.0
 blinker==1.6.2
 cachetools==5.3.1
@@ -10,6 +11,7 @@ fonttools==4.40.0
 gitdb==4.0.10
 GitPython==3.1.31
 idna==3.4
+ImageHash==4.3.1
 importlib-resources==5.12.0
 Jinja2==3.1.2
 jsonschema==4.17.3
@@ -18,10 +20,12 @@ llvmlite==0.39.1
 lxml==4.9.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
+matplotlib==3.7.1
 mdurl==0.1.2
 multimethod==1.9.1
 networkx==3.0
-numpy>=1.24
+numba==0.56.4
+numpy==1.25.0
 pandas==2.0.3
 patsy==0.5.3
 phik==0.12.3
@@ -37,6 +41,7 @@ pyrsistent==0.19.3
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
 PyWavelets==1.4.1
+pywin32==305.1
 PyYAML==6.0
 requests==2.28.1
 rich==13.4.2
