--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -25,7 +25,7 @@ mdurl==0.1.2
 multimethod==1.9.1
 networkx==3.0
 numba==0.56.4
-numpy==1.25.0
+numpy>=1.20
 pandas==2.0.3
 patsy==0.5.3
 phik==0.12.3
